--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 
         |
     </style>
+    <link href="./assets/codec-favicon.png" rel="shortcut icon" type="image/x-icon"/>
+    <link href="./assets/codec-favicon.png" rel="apple-touch-icon"/>
 </head>
 
 <body>
