--- a/index.html
+++ b/index.html
@@ -1888,6 +1888,11 @@
                                 </div>
                             </div>
                             <div class="footer-bottom-wrapper2">
+                                
+                                <h4>Números de contacto:</h4>
+                                <h5>Dentalid:&nbsp; <a href="tel:+526142818546">6142818546</a></h5>
+                                <h5>Gaux:&nbsp; <a href="tel:+526141874448">6141874448</a>&nbsp;y&nbsp;<a href="tel:+526143037370">6143037370</a></h5>
+                                <h5>Zeyco:&nbsp; <a href="tel:+526145044213">6145044213</a></h5>
                                 <div class="important">
                                     * El costo del boleto no cubre el acceso al evento rompehielos.
                                 </div>
