--- a/index.html
+++ b/index.html
@@ -1646,13 +1646,18 @@
 
 
                 <div class="union-grid">
+
+
                     <!-- slider de imagenes -->
-                    <section class="slider-img px-lg-0 px-2">
-                        <div class="slider-container">
+                    <section class="slider-img px-lg-0 px-2 mt-5">
+
+                        <h2 class="mt-3 text-align-center">Se parte de esto:</h2>
+                        <div class="slider-container my-0">
                             <div class="background-image">
 
                             </div>
                             <div class="slider d-flex justify-content-center align-items-center">
+
                                 <div class="slides">
                                     <div class="slide">
                                         <img loading="lazy" src="assets/dentalid~248.webp" alt="Image 3">
