--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <link rel="preload" href="styles/style.css" as="style">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preload" href="styles/index.css" as="style">
+    <link rel="stylesheet" href="styles/index.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -471,7 +471,7 @@
                                             <div class="highlights-item-list">
                                                 <div id="w-node-d82c716a-a54d-1950-7a06-e729d2461735-3863c98b"
                                                     class="highlights-item">
-                                                    <img src="assets/marca-de-verificacion.png" loading="lazy"
+                                                    <img src="assets/check.png" loading="lazy"
                                                         alt="Check Icon" class="icon-1x1-small" />
                                                     <div class="highlight-content">
                                                         <p class="text-size-medium text-uppercase">Conferencias
@@ -481,7 +481,7 @@
                                                 </div>
                                                 <div id="w-node-ef5b19e6-4ab8-47ea-ff07-1d50496e6d2d-3863c98b"
                                                     class="highlights-item">
-                                                    <img src="assets/marca-de-verificacion.png" loading="lazy"
+                                                    <img src="assets/check.png" loading="lazy"
                                                         alt="Check Icon" class="icon-1x1-small" />
                                                     <div class="highlight-content">
                                                         <p class="text-size-medium text-uppercase">Aperitivos</p>
@@ -489,7 +489,7 @@
                                                 </div>
                                                 <div id="w-node-_065f8c8e-1d97-0abf-4335-7ba6a507108b-3863c98b"
                                                     class="highlights-item">
-                                                    <img src="assets/marca-de-verificacion.png" loading="lazy"
+                                                    <img src="assets/check.png" loading="lazy"
                                                         alt="Check Icon" class="icon-1x1-small" />
                                                     <div class="highlight-content">
                                                         <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo *
@@ -600,25 +600,24 @@
                                                 </div>
                                                 <div class="speaker-content-wrapper">
                                                     <div class="heading-style-h4 title-dr">Dr. Fermin Ocañas</div>
-                                                    <div class="text-size-medium"> Cirujano Dentista</div>
+                                                    <div class="text-size-medium"> Maestro en Ciencias Odontológicas</div>
                                                     <div class="speaker-bio-content">
-                                                        <p class="text-bio">Lorem ipsum dolor sit amet consectetur
-                                                            adipisicing elit. Eius dolores ea aspernatur error corrupti
-                                                            voluptatum at quae temporibus? Minus inventore placeat eius
-                                                            beatae eveniet. Commodi expedita officia saepe totam
-                                                            aliquam!
+                                                        <p class="text-bio">
+                                                            Con Acentuación en Ortodoncia por la Universidad Autónoma de Coahuila y Cirujano Dentista por la Universidad Autónoma de Chihuahua. Actualmente, ejerce en práctica privada en LéDent Ortodoncia y se desempeña como Coordinador y Docente de Posgrado, además de ser Docente de Licenciatura en la Universidad Autónoma de Chihuahua. Ha impartido múltiples conferencias en diversos congresos y eventos académicos, y ha dirigido tesis relacionadas con ortodoncia. 
                                                         </p>
                                                         <div class="redes-c ">
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                                 class="d-flex justify-content-center g-2"
                                                                 class="w-layout-grid footer-social-list">
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <a href="https://www.facebook.com/dentalidcuu/"
+                                                                    class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/facebook-white.webp"
                                                                         loading="lazy" alt="Facebook Icon" width="24px"
                                                                         height="24px" class="icon-1x1-small" />
                                                                 </a>
-                                                                <a href="#" class="footer-social-link w-inline-block"
+                                                                <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
+                                                                    class="footer-social-link w-inline-block"
                                                                     target="_blank">
                                                                     <img src="./assets/instagram-white.webp"
                                                                         loading="lazy" alt="Instagram Icon" width="24px"
@@ -767,7 +766,7 @@
                                                     <div class="heading-style-h4 title-dr">Dr. Floriberto Calixto
                                                         Arellanos
                                                     </div>
-                                                    <div class="text-size-medium">Titulo</div>
+                                                    <div class="text-size-medium">Rehabilitación Oral e Implantología</div>
                                                     <div class="speaker-bio-content">
                                                         <p class="text-bio">Dr. Floriberto Calixto Arellano es un
                                                             estomatólogo especializado en operatoria dental,
@@ -1343,7 +1342,7 @@
 
                     <style>
                         .conferencista-titulo {
-                            font-weight: 450;
+                            font-weight: 500;
                         }
 
                         .agenda-list {
@@ -1628,7 +1627,7 @@
                     <!-- slider de imagenes -->
                     <section class="slider-img px-lg-0 px-2 mt-5">
 
-                        <h2 class="mt-3 text-align-center">Se parte de esto:</h2>
+                        <h2 class="mt-3 text-align-center">Vive la Experiencia CODEC:</h2>
                         <div class="slider-container my-0">
                             <div class="background-image">
 
@@ -1882,7 +1881,7 @@
                             </div>
                             <div class="footer-bottom-wrapper2">
 
-                                <p>Números de contacto:</p>
+                                <p style="font-weight: 500;">Contacto:</p>
                                 <p>Dentalid:&nbsp; <a href="tel:+526142818546">6142818546</a></p>
                                 <p>Gaux:&nbsp; <a href="tel:+526141874448">6141874448</a>&nbsp;y&nbsp;<a
                                         href="tel:+526143037370">6143037370</a></p>
