--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <link rel="preload" href="styles/index.css" as="style">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preload" href="styles/style.css" as="style">
+    <link rel="stylesheet" href="styles/style.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -111,7 +111,7 @@
                 <div class="ps-2 pe-2 navegacionF w-100 d-flex align-center">
                     <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                         <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
-                            <a href="index.html" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
+                            <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
                                 <h3 class="navbar-logo">CODEC</h3>
                             </a>
                         </div>
@@ -403,7 +403,7 @@
                                                 </div>
                                                 <div class="margin-bottom margin-small my-5">
                                                     <h1 class="codec-titulo">CODEC</h1>
-                                                    <h3 class="frase-codec">Congreso dental Chihuahuense
+                                                    <h3 class="frase-codec">Congreso Dental Chihuahuense
                                                     </h3>
                                                 </div>
                                                 <div class=" header-infos-wrapper justify-content-md-between mt-5">
@@ -1342,7 +1342,7 @@
 
                     <style>
                         .conferencista-titulo {
-                            font-weight: 500;
+                            font-weight: 400;
                         }
 
                         .agenda-list {
@@ -1445,10 +1445,10 @@
                                         class="location-content-wrapper">
                                         <div class="margin-bottom margin-small">
                                             <div class="ubicacionn">
-                                                <h4 class="lugar text-uppercase">Lugar:
+                                                <h4 class="lugar">Lugar:
                                                 </h4>
-                                                <h4 class="lugar text-uppercase text-align-start">CENTRO DE EXPOSICIONES
-                                                    Y CONVENCIONES
+                                                <h4 class="lugar text-align-start">Centro de Exposiciones
+                                                    y Convenciones
                                                 </h4>
                                             </div>
                                         </div>
