--- a/index.html
+++ b/index.html
@@ -1965,7 +1965,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="./scripts/pago.js"></script>
+    <script src="./scripts/checkout.js"></script>
     <script src="./scripts/boletos.js"></script>
 </body>
 
