--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
+
+        #navbarNav.show {
+            transition: height 5s ease;
+        }
     </style>
 
     <style>
@@ -181,7 +185,8 @@
                                         de no
                                         confirmar se le negará el acceso durante esa sección del evento. Si no sabe en
                                         qué
-                                        consiste, puede consultar el <a class="" href="#agenda" style="color: #fff;">Itinierario.</a></p>
+                                        consiste, puede consultar el <a class="" href="#agenda"
+                                            style="color: #fff;">Itinierario.</a></p>
                                     <label class="radio mt-2" style="color: #fff;">
                                         <input name="asistencia_rompehielos" type="radio" value="si" checked>
                                         <span class="fs-6">Si</span>
@@ -471,8 +476,8 @@
                                             <div class="highlights-item-list">
                                                 <div id="w-node-d82c716a-a54d-1950-7a06-e729d2461735-3863c98b"
                                                     class="highlights-item">
-                                                    <img src="assets/check.png" loading="lazy"
-                                                        alt="Check Icon" class="icon-1x1-small" />
+                                                    <img src="assets/check.png" loading="lazy" alt="Check Icon"
+                                                        class="icon-1x1-small" />
                                                     <div class="highlight-content">
                                                         <p class="text-size-medium text-uppercase">Conferencias
                                                             exclusivas
@@ -481,16 +486,16 @@
                                                 </div>
                                                 <div id="w-node-ef5b19e6-4ab8-47ea-ff07-1d50496e6d2d-3863c98b"
                                                     class="highlights-item">
-                                                    <img src="assets/check.png" loading="lazy"
-                                                        alt="Check Icon" class="icon-1x1-small" />
+                                                    <img src="assets/check.png" loading="lazy" alt="Check Icon"
+                                                        class="icon-1x1-small" />
                                                     <div class="highlight-content">
                                                         <p class="text-size-medium text-uppercase">Aperitivos</p>
                                                     </div>
                                                 </div>
                                                 <div id="w-node-_065f8c8e-1d97-0abf-4335-7ba6a507108b-3863c98b"
                                                     class="highlights-item">
-                                                    <img src="assets/check.png" loading="lazy"
-                                                        alt="Check Icon" class="icon-1x1-small" />
+                                                    <img src="assets/check.png" loading="lazy" alt="Check Icon"
+                                                        class="icon-1x1-small" />
                                                     <div class="highlight-content">
                                                         <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo *
                                                         </p>
@@ -600,10 +605,18 @@
                                                 </div>
                                                 <div class="speaker-content-wrapper">
                                                     <div class="heading-style-h4 title-dr">Dr. Fermin Ocañas</div>
-                                                    <div class="text-size-medium"> Maestro en Ciencias Odontológicas</div>
+                                                    <div class="text-size-medium"> Maestro en Ciencias Odontológicas
+                                                    </div>
                                                     <div class="speaker-bio-content">
                                                         <p class="text-bio">
-                                                            Con Acentuación en Ortodoncia por la Universidad Autónoma de Coahuila y Cirujano Dentista por la Universidad Autónoma de Chihuahua. Actualmente, ejerce en práctica privada en LéDent Ortodoncia y se desempeña como Coordinador y Docente de Posgrado, además de ser Docente de Licenciatura en la Universidad Autónoma de Chihuahua. Ha impartido múltiples conferencias en diversos congresos y eventos académicos, y ha dirigido tesis relacionadas con ortodoncia. 
+                                                            Con Acentuación en Ortodoncia por la Universidad Autónoma de
+                                                            Coahuila y Cirujano Dentista por la Universidad Autónoma de
+                                                            Chihuahua. Actualmente, ejerce en práctica privada en LéDent
+                                                            Ortodoncia y se desempeña como Coordinador y Docente de
+                                                            Posgrado, además de ser Docente de Licenciatura en la
+                                                            Universidad Autónoma de Chihuahua. Ha impartido múltiples
+                                                            conferencias en diversos congresos y eventos académicos, y
+                                                            ha dirigido tesis relacionadas con ortodoncia.
                                                         </p>
                                                         <div class="redes-c ">
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
@@ -766,7 +779,8 @@
                                                     <div class="heading-style-h4 title-dr">Dr. Floriberto Calixto
                                                         Arellanos
                                                     </div>
-                                                    <div class="text-size-medium">Rehabilitación Oral e Implantología</div>
+                                                    <div class="text-size-medium">Rehabilitación Oral e Implantología
+                                                    </div>
                                                     <div class="speaker-bio-content">
                                                         <p class="text-bio">Dr. Floriberto Calixto Arellano es un
                                                             estomatólogo especializado en operatoria dental,
@@ -1472,7 +1486,7 @@
 
                                         </div>
                                         <div
-                                            class="margin-top margin-medium d-flex justify-content-center justify-content-lg-start ps-md-5">
+                                            class="margin-top margin-medium d-flex justify-content-center justify-content-lg-start">
                                             <a target="_blank"
                                                 href="https://www.google.com/maps?ll=28.654587,-106.074699&z=10&t=m&hl=es-ES&gl=US&mapclient=embed&cid=7977009855949666972"
                                                 class="button w-button">Link de Ubicación</a>
