--- a/index.html
+++ b/index.html
@@ -426,7 +426,10 @@
 
                                             </div>
                                             <!-- cuenta regresiva INICIO -->
-                                            <div class="countdown-container mt-5 pt-5">
+                                            <div>
+                                                <h3 class="mt-5">Dias hasta el evento</h3>
+                                            </div>
+                                            <div class="countdown-container mt-2 pt-2">
                                                 <div class="time-circle" id="days-circle">
                                                     <div class="inside-circle">
                                                         <span id="days"></span>
