--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                             </div>
                                             <!-- cuenta regresiva INICIO -->
                                             <div>
-                                                <h3 class="mt-5">Días hasta el evento</h3>
+                                                <h4 class="mt-5 fs-5">Días hasta el evento</h4>
                                             </div>
                                             <div class="countdown-container mt-2 pt-2">
                                                 <div class="time-circle" id="days-circle">
