--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <link rel="preload" href="styles/styles.css" as="style">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preload" href="styles/custom.css" as="style">
+    <link rel="stylesheet" href="styles/custom.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -120,22 +120,19 @@
                             </a>
                         </div>
                         <div class="botonNav">
-                            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                                aria-label="Toggle navigation">
+                            <button class="navbar-toggler ms-auto" type="button" aria-controls="navbarNav"
+                                aria-expanded="false" aria-label="Toggle navigation" id="toggle-button">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                         </div>
                     </div>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="navbar-collapse" id="navbarNav">
                         <div class="navegacion d-flex mt-5 mt-md-0 ms-auto justify-content-center">
                             <nav id="nav-up" class="nav-footer navbar-nav">
-                                <a href="#conferencistas"
-                                    class="navbar-link w-nav-link nav-item nav-link fs-5">Conferencistas</a>
+                                <a href="#conferencistas" class="navbar-link w-nav-link nav-item nav-link fs-5">Conferencistas</a>
                                 <a href="#agenda" class="navbar-link w-nav-link nav-item nav-link fs-5">Itinerario</a>
                                 <a href="#location" class="navbar-link w-nav-link nav-item nav-link fs-5">Ubicación</a>
-                                <a href="#section-home-partner"
-                                    class="navbar-link w-nav-link nav-item nav-link fs-5">Nosotros</a>
+                                <a href="#section-home-partner" class="navbar-link w-nav-link nav-item nav-link fs-5">Nosotros</a>
                                 <a href="#faq" class="navbar-link w-nav-link nav-item nav-link fs-5">FAQs</a>
                             </nav>
                         </div>
@@ -144,6 +141,28 @@
                         </div>
                     </div>
                 </div>
+                <script>
+                    document.addEventListener('DOMContentLoaded', function () {
+                        const toggleButton = document.getElementById('toggle-button');
+                        const navbarCollapse = document.getElementById('navbarNav');
+                        
+                        toggleButton.addEventListener('click', function () {
+                            if (navbarCollapse.classList.contains('show')) {
+                                navbarCollapse.style.maxHeight = `${navbarCollapse.scrollHeight}px`;
+                                setTimeout(() => {
+                                    navbarCollapse.classList.remove('show');
+                                    navbarCollapse.style.maxHeight = '0';
+                                }, 10);
+                            } else {
+                                navbarCollapse.classList.add('show');
+                                navbarCollapse.style.maxHeight = `${navbarCollapse.scrollHeight}px`;
+                                setTimeout(() => {
+                                    navbarCollapse.style.maxHeight = '1000px';
+                                }, 10);
+                            }
+                        });
+                    });
+                </script>
             </div>
 
 
