--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <link rel="preload" href="styles/custom.css" as="style">
-    <link rel="stylesheet" href="styles/custom.css">
+    <link rel="preload" href="styles/styles.css" as="style">
+    <link rel="stylesheet" href="styles/styles.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -36,10 +36,10 @@
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
-
+/* 
         #navbarNav.show {
             transition: height 5s ease;
-        }
+        } */
     </style>
 
     <style>
@@ -111,7 +111,7 @@
     <div class="page-wrapper">
         <div class="page-wrapper">
 
-            <div class="header navbar navbar-expand-lg navbar-light bg-light py-3">
+            < <div class="header navbar navbar-expand-lg navbar-light bg-light py-3">
                 <div class="ps-2 pe-2 navegacionF w-100 d-flex align-center">
                     <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                         <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
@@ -147,21 +147,28 @@
                         const navbarCollapse = document.getElementById('navbarNav');
                         
                         toggleButton.addEventListener('click', function () {
-                            if (navbarCollapse.classList.contains('show')) {
-                                navbarCollapse.style.maxHeight = `${navbarCollapse.scrollHeight}px`;
-                                setTimeout(() => {
+                            if (window.innerWidth <= 991) { // Solo aplicar en pantallas de 991px o menos
+                                if (navbarCollapse.classList.contains('show')) {
                                     navbarCollapse.classList.remove('show');
                                     navbarCollapse.style.maxHeight = '0';
-                                }, 10);
+                                } else {
+                                    navbarCollapse.classList.add('show');
+                                    navbarCollapse.style.maxHeight = `${navbarCollapse.scrollHeight}px`;
+                                }
+                            }
+                        });
+                        
+                        window.addEventListener('resize', function () {
+                            if (window.innerWidth > 991) {
+                                navbarCollapse.classList.remove('show');
+                                navbarCollapse.style.maxHeight = 'none';
                             } else {
                                 navbarCollapse.classList.add('show');
-                                navbarCollapse.style.maxHeight = `${navbarCollapse.scrollHeight}px`;
-                                setTimeout(() => {
-                                    navbarCollapse.style.maxHeight = '1000px';
-                                }, 10);
+                                navbarCollapse.style.maxHeight = '0';
                             }
                         });
                     });
+
                 </script>
             </div>
 
